--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "git-flow-npm": "^1.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "route": "^0.2.5",
