--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "git-flow-npm": "^1.8.1",
+    "jalali-moment": "^3.3.11",
+    "make-styles": "^0.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
